# bhsim

./: .gitignore  README.md
bhsim/: Cargo.toml
bhsim/scenarios/: 10k-body_test.yaml  2d-orbit.yaml  2d-test-1.yaml  5k-body_test.yaml  6k-body_test.yaml  8k-y-axis_orbit.yaml  barnes-hut_many.yaml  barnes-hut_sphere.yaml  barnes-hut_test.yaml  box.yaml  butterfly.yaml  circle.yaml  cluster.yaml  cluster_orbit.yaml  galaxy.yaml  many.yaml  solar_system.yaml  sphere.yaml  test_2d-1.yaml  test_file.yaml  x-axis_orbit.yaml  y-axis_2orbit.yaml  y-axis_orbit.yaml  y-axis_orbit_500.yaml  z-axis_orbit.yaml
bhsim/src/: lib.rs  main.rs
bhsim/src/benchmark/: benchmark.rs
bhsim/src/configuration/: config.rs
bhsim/src/simulation/: barnes_hut.rs  engine.rs  forces.rs  integrator.rs  mod.rs  params.rs  scenario.rs  states.rs
bhsim/src/visualization/: bhsim_vis2d.rs  bhsim_vis3d.rs  mod.rs
bhsim/tests/: tests.rs
scenario_builder/: 2d_y-axis_gen.py  3d_y-axis_gen.py  test_name.yaml
